# gitBuddy

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  PRD.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
design-mockups/: 01-refined-native.html  02-terminal-brutalist.html  03-buddy-warm.html  index.html
docs/: DECISIONS.md  RELEASING.md
docs/plans/: 2026-06-10-review-findings-fixes.md  main-window.md
scripts/: build-app.sh  generate-latest-json.sh  regenerate-tray-icon.py
scripts/dev/: tauri-ipc-stub.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: sign-and-run.sh
src-tauri/src/: accounts.rs  aggregator.rs  codeberg.rs  commands.rs  github.rs  gitlab.rs  keychain.rs  lib.rs  local_index.rs  main.rs  notifications.rs  oauth.rs  provider_util.rs  settings.rs  types.rs  util.rs
src/lib/: Buddy.svelte  ContextMenu.svelte  format.ts
src/lib/components/: DetailPane.svelte  RepoCard.svelte
src/lib/data/: api.ts  auth.ts  stub.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  main-window.css
src/routes/popover/: +page.svelte
