[package]
name = "gitbuddy"
version = "0.1.0"
description = "Menu-bar companion for GitHub, GitLab and Codeberg repositories"
authors = ["Björn Witt"]
edition = "2021"

[lib]
name = "gitbuddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` enables real window transparency on macOS (needed for the
# popover's rounded corners). It uses private Apple symbols, so apps built with
# this feature cannot be submitted to the Mac App Store — see PRD §2 non-goals.
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# M2 — GitHub provider (PAT auth, search API), Keychain storage, async networking.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
keyring = { version = "3", features = ["apple-native"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "2"
# Lets the per-forge providers share one object-safe `ProviderBackend` trait
# with `async fn` methods (boxed futures), so the aggregator and AppState can
# hold `Arc<dyn ProviderBackend>` instead of three concrete provider maps.
async-trait = "0.1"

# M3 — Local index: filesystem walking + libgit2 for per-repo diagnostics.
# `vendored-libgit2` ships libgit2 in-tree so we don't need a system package.
# `https` turns on libgit2's HTTPS support (the `-DUSE_HTTPS=` flag during
# the libgit2 build); without it clones fail at runtime with "no TLS stream
# available". `vendored-openssl` ships an in-tree OpenSSL so that backend
# resolves consistently across machines instead of relying on the system
# install. Adds a few minutes to the first build; cached after that.
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https"] }
walkdir = "2"
dirs = "6"

